员工信息录入到数据库

--- a/AttendanceServer/CMakeLists.txt
+++ b/AttendanceServer/CMakeLists.txt
@@ -20,6 +20,10 @@ set(PROJECT_SOURCES
         FaceEngine.h
         QFaceObject.cpp
         QFaceObject.h
+        registerwin.cpp
+        registerwin.h
+        registerwin.ui
+        
 )
 
 # ------------------- Qt6 bundle -------------------
