识别人脸ID查询数据个人信息

--- a/FaceAttendance/CMakeLists.txt
+++ b/FaceAttendance/CMakeLists.txt
@@ -93,3 +93,11 @@ install(TARGETS ${PROJECT_NAME}
 if(QT_VERSION_MAJOR EQUAL 6)
     qt_finalize_executable(${PROJECT_NAME})
 endif()
+
+
+# 如果需要控制台输出，添加以下行
+if(WIN32)
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+        WIN32_EXECUTABLE OFF
+    )
+endif()
